--- a/android/intltestapp/src/main/AndroidManifest.xml
+++ b/android/intltestapp/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     package="com.facebook.hermes.intltest">
 
     <application>
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.DayNight">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <!-- MAIN represents that it is the Main Activity-->
                 <action android:name="android.intent.action.MAIN" />
