--- a/android/intltestapp/build.gradle
+++ b/android/intltestapp/build.gradle
@@ -15,7 +15,7 @@ plugins {
 
 import de.undercouch.gradle.tasks.download.Download
 
-buildDir = "${rootProject.ext.hermes_ws}/build_android/intltest"
+buildDir = "${rootProject.ext.hermes_ws}/build_android/intltestapp"
 buildDir.mkdirs()
 
 def test262DownloadsDirPath = "${rootProject.ext.hermes_ws}/build_android/intltest/downloads/test262"
@@ -57,19 +57,6 @@ android {
     }
     testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
-    externalNativeBuild {
-      cmake {
-        arguments "-DHERMES_IS_ANDROID=True"
-        arguments "-DHERMES_FACEBOOK_BUILD=${rootProject.ext.facebookBuild}"
-        arguments "-DANDROID_STL=c++_shared"
-        arguments "-DANDROID_PIE=True"
-        arguments "-DIMPORT_HERMESC=${rootProject.ext.hermesC}"
-        arguments "-DFBSOURCE_DIR=${rootProject.ext.fbsource}"
-        arguments "-DHERMES_SLOW_DEBUG=False"
-        arguments "-DHERMES_ENABLE_INTL=True"
-        targets "jsijniapp", "jsijniepiapp", "libhermes"
-      }
-    }
     ndk {
       abiFilters (*rootProject.ext.abis)
     }
@@ -79,8 +66,52 @@ android {
     cmake {
       version "3.6.0"
       path "../../CMakeLists.txt"
-      buildStagingDirectory = "${rootProject.ext.hermes_ws}/staging/intl"
+      buildStagingDirectory = "${rootProject.ext.hermes_ws}/staging/intltestapp"
       buildStagingDirectory.mkdirs()
+    }
+  }
+
+  flavorDimensions "featureset"
+  productFlavors  {
+    vanilla {
+      dimension "featureset"
+      applicationIdSuffix ".vanilla"
+      versionNameSuffix "-vanilla"
+
+      externalNativeBuild {
+        cmake {
+          arguments "-DHERMES_IS_ANDROID=True"
+          arguments "-DHERMES_FACEBOOK_BUILD=${rootProject.ext.facebookBuild}"
+          arguments "-DANDROID_STL=c++_shared"
+          arguments "-DANDROID_PIE=True"
+          arguments "-DIMPORT_HERMESC=${rootProject.ext.hermesC}"
+          arguments "-DFBSOURCE_DIR=${rootProject.ext.fbsource}"
+          arguments "-DHERMES_SLOW_DEBUG=False"
+          arguments "-DHERMES_ENABLE_INTL=False"
+          targets "jsijniapp", "jsijniepiapp", "libhermes"
+        }
+      }
+    }
+    intl {
+      isDefault true
+      dimension "featureset"
+      applicationIdSuffix ".intl"
+      versionNameSuffix "-intl"
+
+      externalNativeBuild {
+        cmake {
+          arguments "-DHERMES_IS_ANDROID=True"
+          arguments "-DHERMES_FACEBOOK_BUILD=${rootProject.ext.facebookBuild}"
+          arguments "-DANDROID_STL=c++_shared"
+          arguments "-DANDROID_PIE=True"
+          arguments "-DIMPORT_HERMESC=${rootProject.ext.hermesC}"
+          arguments "-DFBSOURCE_DIR=${rootProject.ext.fbsource}"
+          arguments "-DHERMES_SLOW_DEBUG=False"
+          arguments "-DHERMES_ENABLE_INTL=True"
+          targets "jsijniapp", "jsijniepiapp", "libhermes"
+        }
+      }
+
     }
   }
 
